@@ -107,12 +107,13 @@ A prefix argument disables this behaviour."
 	      nil t)))
 
 (defun inferior-slime-stop-transcript ()
-  (run-with-timer 0.2 nil 
-		  (lambda (buffer) 
-		    (with-current-buffer buffer
-		      (remove-hook 'comint-output-filter-functions
-				   'inferior-slime-show-transcript t)))
-		  (current-buffer)))
+  (with-current-buffer (process-buffer (slime-inferior-process))
+    (run-with-timer 0.2 nil 
+		    (lambda (buffer) 
+		      (with-current-buffer buffer
+			(remove-hook 'comint-output-filter-functions
+				     'inferior-slime-show-transcript t)))
+		    (current-buffer))))
 
 (defun inferior-slime-init ()
   (add-hook 'slime-inferior-process-start-hook 'inferior-slime-hook-function)
